# Burnmeter

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
DESIGN-IS-2026-06-12/: 00-scope.md  01-evidence.md  02-scorecard.md  03-verdict.md  04-handoff-prompt.md
backend/: badge.py  keys.py  main.py  pricing.py  store.py  sync.py
backend/providers/: anthropic_adapter.py  base.py  gcp_billing.py  gcp_logs.py  gemini_billing.py  openai_adapter.py
backend/proxy/: gemini_live_proxy.py  gemini_proxy.py
burnmeter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/superpowers/plans/: 2026-06-13-gcp-billing-vertex-integration.md  2026-06-15-providers-accordion-integrate.md  2026-06-15-providers-nav-redesign.md  2026-06-17-anthropic-adapter.md  2026-06-18-ui-next-level.md
docs/superpowers/specs/: 2026-06-12-data-poster-redesign-design.md  2026-06-13-gcp-billing-vertex-integration-design.md  2026-06-15-providers-accordion-integrate-design.md  2026-06-15-providers-nav-redesign-design.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
plans/: 01-ux-redesign.md
scripts/: seed_demo.py
tests/: test_anthropic_adapter.py  test_api.py  test_badge.py  test_gcp_billing.py  test_gcp_logs.py  test_gemini_proxy.py  test_insights.py  test_keys.py  test_live_proxy.py  test_openai_adapter.py  test_pricing.py  test_store.py
tests/fixtures/: anthropic_costs.json  anthropic_usage.json  openai_costs.json  openai_usage.json
(+18 files in other folders)
