[project]
name = "burnmeter"
version = "0.1.0"
description = "Local-first multi-provider LLM token & cost dashboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "keyring>=25.0",
    "cryptography>=43.0",
    "pydantic>=2.8",
]

[project.optional-dependencies]
billing = ["google-cloud-bigquery>=3.25"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["backend", "backend.providers", "backend.proxy"]
